--- a/schedule-feed/.gitignore
+++ b/schedule-feed/.gitignore
@@ -5,4 +5,10 @@
 .project
 .settings
 .springBeans
-/target/
+classes/
+generated-sources/
+generated-test-sources/
+maven-archiver/
+maven-status/
+surefire-reports/
+test-classes/
