--- a/schedule-feed/Dockerfile
+++ b/schedule-feed/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:8u121-jre-alpine
+MAINTAINER Raphael Inacio da Silva <contato.raphaelinacio@gmail.com>
 ADD target/schedule-feed-0.0.1.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["sh", "-c", "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar --spring.data.mongodb.host=db"]
